# visual-firmware

./: CMakeLists.txt  README.md
include/visual_firmware/: gpio.h  scheduler.h  sio.h  task_manager.h
src/: linker.ld  main.c  scheduler.c  task_manager.c
src/tasks/: task_1.c  task_1.h  task_2.c  task_2.h  task_3.c  task_3.h
